modify token expirations
